# side-chain-training

./: .gitignore  README.md  pyproject.toml
chtc/: README.md  apptainer-build.sub  embedding.def  extract-esm2.sub  merge_embedding_indices.sh  run_extract_esm2.sh
dina2/: __init__.py  ablations.py  alignment.py  chemistry.py  cli.py  embeddings.py  evaluation.py  features.py  histags.py  labels.py  normalization.py  pdb.py  repro.py  splits.py  training.py
docs/: architecture.md  commands.md  data_contracts.md
tests/: test_embeddings.py  test_features.py  test_histags_alignment.py  test_labels.py
