[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "dina2-sidechain"
version = "0.1.0"
description = "Sidechain-aware DINA2 protein dynamics prediction pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==2.3.5",
  "pandas==2.2.3",
]

[project.optional-dependencies]
structure = [
  "biopython==1.87",
  "mdtraj==1.11.1.post1",
  "freesasa==2.2.1",
  "scipy==1.17.1",
  "pyarrow==24.0.0",
]
ml = [
  "torch==2.4.1",
  "transformers==4.46.3",
  "scikit-learn==1.7.0",
]
dev = [
  "pytest==8.4.1",
]

[project.scripts]
dina2 = "dina2.cli:main"

[tool.setuptools.packages.find]
include = ["dina2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
